# SafeMask

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  README_CN.md  README_FAST.md  README_JA.md  README_KO.md  README_RU.md  command-win.txt  index.html  package-lock.json  package.json  release.md  repomix-output.xml  tailwind.config.js  test_func.txt  test_perf.txt  tsconfig.json  vite.config.ts  架构说明.md  测试方式.md  测试方式.txt
.cargo/: config.toml
.claude/plans/: ai-pii-detection.plan.md  fix-ai-loading.md  vue-to-react-migration.plan.md
.github/workflows/: release.yml
custom/my/: my.yaml
doc/优化方案/: 优化方案v1.md
doc/官网打造方案/: 官网v1.md
doc/架构详解/: 核心脱敏引擎与冲突算法.md  系统集成、剪切板监控与桌面安全.md  设计哲学与分层体系.md  高并发保序流水线与IO优化.md
doc/模型选型/: AI模型选型标准框架.md
doc/脱敏引擎&核心脱敏优化/: core-engine-refinement-v2.plan.md  优化建议.md  引擎优化v1.md  引擎优化v2.md  引擎优化v3.md
doc/迭代文档/: 待确认和执行.md  迭代优化-模型-v1.1.md  迭代优化-模型-v1.md  迭代优化-模型-v3.md  迭代优化-模型-确认v1.1.md  迭代优化UI-v1.md  迭代优化UI-v3.md  迭代优化UI-v4.md  迭代优化UI-v5.md
doc/部署文档/: 服务器操作速查清单.md  模型下载鉴权代理-自建服务器部署指南.md  运维文档.md  部署完善&优化.md  部署文档.md
docs/: RULES_IMPORT.md  THEMES.md  record-writer.md  records-augmentation-plan.md  使用手册.md
docs/superpowers/plans/: 2026-07-02-ui-refinement-plan.md
rules/auth/ai/: keys.yaml
rules/auth/database/: urls.yaml
rules/network/: dns.yaml  ip.yaml
rules/personal/: cardNum.yaml  email.yaml  phone.yaml
safemask/: .gitignore  package-lock.json  repomix-output.xml
safemask/src/: index.html
safemask/src-tauri/: Cargo.toml
safemask/src-tauri/rules/network/: dns.yaml  ip.yaml
safemask/src-tauri/rules/personal/: cardNum.yaml  email.yaml
safemask/src-tauri/src/: clipboard.rs  engine.rs  main.rs
src/: App.tsx  App.vue  App.vue.js  App.vue.js.map  READMD.md  config.rs  engine.rs  index.html  main.js  main.js.map  main.rs  main.ts  main.tsx  style.css
src-tauri/: .taurignore  Cargo.toml  build.rs  rules.yaml  tauri.conf.json  tauri.conf.json.md
src-tauri/capabilities/: default.json
src-tauri/custom/: internal.yaml  user_rules.yaml
src-tauri/rules/: rulesTemp.md
src-tauri/rules/auth/ai/: keys.yaml
src-tauri/rules/code/: code.yaml
src-tauri/rules/network/: dns.yaml  ip.yaml
src-tauri/rules/personal/: bankCard.yaml  phone.yaml  url.yaml
src-tauri/src/: ai_downloader.rs  clipboard.rs  commands.rs  config.rs  lib.rs  main.rs  processor.rs  state.rs  架构图.md
src-tauri/src/api/: files.rs  mod.rs  system.rs  text.rs
src-tauri/src/common/: errors.rs  events.rs  mod.rs  state.rs
src-tauri/src/core/: config.rs  download_auth.rs  engine.rs  hybrid_engine.rs  mod.rs  rules.rs
src-tauri/src/core/masking/: engine.rs  mod.rs  strategies.rs
src-tauri/src/core/orchestrator/: mod.rs  scene.rs
src-tauri/src/core/recognizer/: aho_corasick_recognizer.rs  checksum_recognizer.rs  context_enhancer.rs  mod.rs  ner_recognizer.rs  regex_recognizer.rs  registry.rs  types.rs
src-tauri/src/core/resolver/: mod.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/ai/: mod.rs  model_manager.rs  ner_engine.rs
src-tauri/src/infra/clipboard/: handler.rs  magic_paste.rs  mod.rs  monitor.rs
src-tauri/src/infra/config/: loader.rs  mod.rs  rule_import.rs  shortcut_manager.rs
src-tauri/src/infra/fs/: processor.rs
src-tauri/src/infra/record_writer/: markdown.rs  mod.rs
src/components/: AiStatus.vue  ExitConfirm.vue  ExitConfirm.vue.js  ExitConfirm.vue.js.map  FileProcessor.vue  FileProcessor.vue.js  FileProcessor.vue.js.map  HistoryList.vue  HistoryList.vue.js  HistoryList.vue.js.map  MagicFeedback.vue  MagicFeedback.vue.js  MagicFeedback.vue.js.map  RuleManager.vue  RuleManager.vue.js  RuleManager.vue.js.map  Settings.vue  Settings.vue.js  Settings.vue.js.map  Sidebar.vue  Sidebar.vue.js  Sidebar.vue.js.map  StatCard.vue  StatCard.vue.js  StatCard.vue.js.map
src/components/dashboard/: FileProcessor.tsx  StatCard.tsx
src/components/feedback/: MagicFeedback.tsx
src/components/history/: DocumentPreview.tsx  HistoryList.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/overlay/: ExitConfirm.tsx
src/components/rules/: RuleManager.tsx
src/components/settings/: ModelDownloadCard.tsx  SettingsPage.tsx  ThemePicker.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  GlassPanel.tsx  Input.tsx  SettingToggle.tsx  Toggle.tsx
src/hooks/: useAppStore.ts  useAudioFeedback.ts  useModelDownloader.ts  useTauriEvents.ts  useTheme.ts
src/lib/: animations.ts  maskColors.ts  themeStorage.ts  themes.ts  utils.ts
src/services/: api.js  api.js.map  api.ts
src/stores/: useAppStore.js  useAppStore.js.map  useAppStore.ts
workers/download-proxy/: deploy.sh  init-key.sh  nginx.conf.template  package.json  server.js  tsconfig.json  verify.sh  wrangler.toml
workers/download-proxy/src/: index.ts
