[package]
name = "SafeMask"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.54", features = ["derive"] }
memmap2 = "0.9.9"
once_cell = "1.21.3"
rayon = "1.11.0"
regex = "1.12.2"

# 极致性能优化配置: 当运行 cargo build --release 时生效
[profile.release]
opt-level = 3
lto = true # 启用链接时优化
codegen-units = 1 # 减少代码生成单元以提高优化效果
panic = "abort" # 减少二进制文件大小

