[package]
name = "SafeMask"
version = "1.0.0"
edition = "2024" # 2024最新版语法规范
authors = ["xiaosheng <xiaosheng.tech@outlook.com>"]
description = "A high-performance, ordered data masking tool written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AiToByte/SafeMask.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "safemask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 原有核心
aho-corasick = "1.1.4"
regex = "1.12.2"
rayon = "1.11.0"
memmap2 = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.4"
mimalloc = "0.1"
once_cell = "1.21.3"
anyhow = "1.0"
arboard = "3.6.1"
crossbeam-channel = "0.5"
# 方案一：原生事件驱动剪贴板监听
clipboard-master = "4.0.0"


# Tauri 增强
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2.5"
serde_json = "1.0"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-notification = "2.2.1"  # 同上
