[package]
name = "SafeMask"
version = "1.1.3"
edition = "2024" # 2024最新版语法规范
authors = ["xiaosheng <xiaosheng.tech@outlook.com>"]
description = "A high-performance, ordered data masking tool written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/AiToByte/SafeMask.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "safemask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 原有核心
aho-corasick = "1.1.4"
regex = "1.12.2"
rayon = "1.11.0"
memmap2 = "0.9.9"
memchr = "2.7"      # 极速字节查找 (用于寻找换行符)
bytecount = "0.6"   # SIMD 加速行数统计
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9" # 用于加载配置文件
walkdir = "2.4"
mimalloc = "0.1"
once_cell = "1.21.3"  # 单例初始化
anyhow = "1.0"   # 应用级别错误处理
arboard = "3.6.1"  # 跨平台剪贴板读写
crossbeam-channel = "0.5" # 高性能通道 (用于背压控制)
clipboard-master = "4.0.0" # 系统级剪贴板事件监听
rand = "0.8.5"   # 用于 jitter 随机抖动，防止雷鸣群效应
parking_lot = "0.12"      # 比 std::sync::Mutex 更快更小的锁
env_logger = "0.11"  # 添加日志库
log = "0.4"
smallvec = { version = "1.13", features = ["serde"] }
# --- 错误处理 ---
thiserror = "1.0" # 库级别错误定义
zip = "2.2"         # 处理 Office 文档内部结构
calamine = "0.26"     # 读取 Excel
rust_xlsxwriter = "0.93" # 写入 Excel
pdf-extract = "0.7"   # PDF 文本提取
quick-xml = "0.36"    # 高性能 XML 处理（用于 Docx）
# Tauri 增强
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2.5"
serde_json = "1.0"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-notification = "2.2.1"  # 同上
